<?xml version="1.0"?>
<package>
  <name>capybot_driver</name>
  <version>0.0.0</version>
  <description>The capybot_driver package</description>

  <author email="zach.inbox@gmail.com">Zach Anderson</author>
  <maintainer email="zach.inbox@gmail.com">Zach Anderson</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>capybot_description</run_depend>

  <export></export>
</package>
